--- a/views/formulas.hbs
+++ b/views/formulas.hbs
@@ -191,14 +191,16 @@
                             <th>% of Ingredient</th>
                             <th>Total Amt of Ing</th>
                         </tr>
-                        {{#each trial_data1}}
+                        {{#each trialData1}}
                             <p>Batch date: {{batch_date}}</p>
                             <p>Formulator: {{formulator}}</p>
-                            <p>Total Amt of Formula: {{s}}</p>
-                            <p>Total Percentage: {{percent}}</p>
-                            <p class = "totalPercent">WARNING: Total Percentage = {{percent}}</p>
-                            <a href = "/projects/{{project_id}}/procedure{{trial_num}}">Procedure</a>
                         {{/each}}
+                        {{#each trial_data1}}
+                            <p>Total Amt of Formula: {{s}}</p>
+                            <p class = "totalPercent">WARNING: Total Percentage = {{percent}}</p>
+                        {{/each}}
+                            <a href = "/projects/{{project_id}}/procedure{{trial_num1}}">Procedure</a>
+                        
 
 
                         {{#each formula_ingredient_data1}}
@@ -309,12 +311,15 @@
                             <th>% of Ingredient</th>
                             <th>Total Amt of Ing</th>
                         </tr>
-                            {{#each trial_data2}}
+                            {{#each trialData2}}
                                 <p>Batch date: {{batch_date}}</p>
                                 <p>Formulator: {{formulator}}</p>
+                            {{/each}}
+                            {{#each trial_data2}}
                                 <p>Total Amt of Formula: {{s}}</p>
                                 <p class = "totalPercent">WARNING: Total Percentage = {{percent}}</p>
-                                <a href = "/projects/{{project_id}}/procedure{{trial_num}}">Procedure</a>
+                            {{/each}}
+                                <a href = "/projects/{{project_id}}/procedure{{trial_num2}}">Procedure</a>
                                 {{!-- <script>
                                     var tp = document.getElementByClassName("totalPercent");
                                     if ({{percent}} != 100) {
@@ -322,7 +327,7 @@
                                     }
                                 </script> --}}
                                 
-                            {{/each}}
+                           
 
                             {{#each formula_ingredient_data2}}
                             <tr>
