--- a/views/inventory.hbs
+++ b/views/inventory.hbs
@@ -9,7 +9,9 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
+    <link rel="stylesheet" href="/styles/inventory.css">
     <link rel="stylesheet" href="/partials/color.css">
+
 
 </head>
 
@@ -63,7 +65,7 @@
 
 
         <div class="col s12 m4 l2">
-            <a href="#terms" class="btn waves-effect waves-light luluble-pink modal-trigger">Add</a>
+            <a href="#terms" class="btn waves-effect waves-luluble-pink luluble-pink modal-trigger">Add</a>
             <div class="modal" id="terms">
                 <div style="padding: 5% 5% 5% 5%">
                     {{!-- <b><span>Add a New Ingredient</span></b> --}}
@@ -342,25 +344,41 @@
 
     <!-- INVENTORY TABLE -->
     <div style="padding:20px">
-
+        <div class="table-container">
         <table id="my-table" class="scrollable">
             <thead>
                 <tr id = "ing">
                     <th id = "inci">INCI Name
                         {{!-- <span class="large material-icons">import_export</span> --}}
-                        <button id="sort-button">Sort Alphabetically</button>
+                        {{!-- <button id="sort-button">Sort Alphabetically</button> --}}
+                        <a id="sort-inci-button" class="waves-effect">
+                            <i class="large material-icons" style="font-size: 20px">arrow_drop_down</i>
+                        </a>
+
                     </th>
                     <th id = "trade">Trade Name
-                        <span class="large material-icons">import_export</span>
+                        {{!-- <span class="large material-icons">import_export</span> --}}
+                        <a id="sort-trade-button" class="waves-effect">
+                            <i class="large material-icons" style="font-size: 20px">arrow_drop_down</i>
+                        </a>
                     </th>
                     <th>Amount Available
-                        <span class="large material-icons">import_export</span>
+                        {{!-- <span class="large material-icons">import_export</span> --}}
+                        <a id="sort-amount-button" class="waves-effect">
+                            <i class="large material-icons" style="font-size: 20px">arrow_drop_down</i>
+                        </a>
                     </th>
                     <th id = "shelf">Shelf
-                        <span class="large material-icons">import_export</span>
+                        {{!-- <span class="large material-icons">import_export</span> --}}
+                        <a id="sort-shelf-button" class="waves-effect">
+                            <i class="large material-icons" style="font-size: 20px">arrow_drop_down</i>
+                        </a>
                     </th>
                     <th id = "lot_number">Lot Number
-                        <span class="large material-icons">import_export</span>
+                        {{!-- <span class="large material-icons">import_export</span> --}}
+                        {{!-- <a id="sort-lot-button" class="waves-effect">
+                            <i class="large material-icons" style="font-size: 20px">arrow_drop_down</i>
+                        </a> --}}
                     </th>
                     <th id = "archive">Archive
                         <span class="large material-icons">import_export</span>
@@ -541,6 +559,7 @@
                 {{/each}}
             </tbody>
         </table>
+        </div>
     </div>
     </div>
 
@@ -588,40 +607,17 @@
     </script>
 
     <script>
-        const sort = document.querySelector('#sort-button');
-        //let selectedOption;
-        
-        sort.addEventListener('change', (event) => {
-            //window.location.href = "inventory/"
-            //selectedOption = event.target.value;
-            alert("hello");
-            //window.location.href += "/" + selectedOption;
-            //if (window.location.href.indexOf("inventory/") !== -1) {
-                //window.location.href = selectedOption;
-            //}
-            //else {
-                //window.location.href = "inventory/" + selectedOption;
-            //}
-            //sleep(1000);
-            //let header = document.getElementById("inventoryTitle");
-            //console.log(header);
-        });
-        //header.innerHTML = "Inventory - " + selectedOption;
-    </script>
-
-
-    <script>
         $(document).ready(function () {
             $('.modal').modal();
         })
     </script>
 
     <script>
-        document.getElementById('sort-button').addEventListener('click', function() {
-            sortTable(0); // Sort by the first column
+        document.getElementById('sort-inci-button').addEventListener('click', function() {
+            sortTableByInci(0); // Sort by the first column
         });
 
-        function sortTable(columnIndex) {
+        function sortTableByInci(columnIndex) {
             var table, rows, switching, i, x, y, shouldSwitch;
             table = document.getElementById('my-table');
             switching = true;
@@ -644,6 +640,101 @@
             }
         }
     </script>
+
+    <script>
+        document.getElementById('sort-trade-button').addEventListener('click', function() {
+            sortTableByTrade(1); // Sort by the first column
+        });
+
+        function sortTableByTrade(columnIndex) {
+            var table, rows, switching, i, x, y, shouldSwitch;
+            table = document.getElementById('my-table');
+            switching = true;
+            while (switching) {
+                switching = false;
+                rows = table.rows;
+                for (i = 1; i < (rows.length - 1); i++) {
+                shouldSwitch = false;
+                x = rows[i].getElementsByTagName('TD')[columnIndex];
+                y = rows[i + 1].getElementsByTagName('TD')[columnIndex];
+                if (x.innerHTML.toLowerCase() > y.innerHTML.toLowerCase()) {
+                    shouldSwitch = true;
+                    break;
+                }
+                }
+                if (shouldSwitch) {
+                rows[i].parentNode.insertBefore(rows[i + 1], rows[i]);
+                switching = true;
+                }
+            }
+        }
+    </script>
+
+    <script>
+        document.getElementById('sort-amount-button').addEventListener('click', function() {
+            sortTableByAmount(2); // Sort by the first column
+        });
+
+        function sortTableByAmount(columnIndex) {
+            var table, rows, switching, i, x, y, shouldSwitch;
+            table = document.getElementById('my-table');
+            switching = true;
+            while (switching) {
+                switching = false;
+                rows = table.rows;
+                for (i = 1; i < (rows.length - 1); i++) {
+                    shouldSwitch = false;
+                    x = rows[i].getElementsByTagName('TD')[columnIndex];
+                    y = rows[i + 1].getElementsByTagName('TD')[columnIndex];
+                    // Compare the cell values as numbers instead of strings
+                    if (parseInt(x.innerHTML) > parseInt(y.innerHTML)) {
+                        shouldSwitch = true;
+                        break;
+                    }
+                }
+                if (shouldSwitch) {
+                    rows[i].parentNode.insertBefore(rows[i + 1], rows[i]);
+                    switching = true;
+                }
+            }
+        }
+    </script>
+
+    <script>
+        document.getElementById('sort-shelf-button').addEventListener('click', function() {
+            sortTableByShelf(3); // Sort by the first column
+        });
+
+        function sortTableByShelf(columnIndex) {
+            var table, rows, switching, i, x, y, shouldSwitch;
+            table = document.getElementById('my-table');
+            switching = true;
+            while (switching) {
+                switching = false;
+                rows = table.rows;
+                for (i = 1; i < (rows.length - 1); i++) {
+                    shouldSwitch = false;
+                    x = rows[i].getElementsByTagName('TD')[columnIndex];
+                    y = rows[i + 1].getElementsByTagName('TD')[columnIndex];
+                    // Separate the integer and letter parts of the cell values
+                    var xInt = parseInt(x.innerHTML);
+                    var xLetter = x.innerHTML.charAt(1);
+                    var yInt = parseInt(y.innerHTML);
+                    var yLetter = y.innerHTML.charAt(1);
+                    // Compare the integer parts first, and then the letter parts
+                    if (xInt > yInt || (xInt === yInt && xLetter > yLetter)) {
+                        shouldSwitch = true;
+                        break;
+                    }
+                }
+                if (shouldSwitch) {
+                    rows[i].parentNode.insertBefore(rows[i + 1], rows[i]);
+                    switching = true;
+                }
+            }
+        }
+    </script>
+
 
 </body>
 
